--- a/python/examples/notebooks/pattern_generation_generic.ipynb
+++ b/python/examples/notebooks/pattern_generation_generic.ipynb
@@ -2,269 +2,277 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Roll Cutting by Pattern Generation"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Imports"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [
+    "# Add library location to system path\r\n",
+    "# This is only necessary when using a non-distributed version of amplpy_gurobi\r\n",
+    "from sys import path\r\n",
+    "path.append(\"D:\\\\Development\\\\ampl\\solvers-private\\\\build\\\\vs64\\\\bin\")\r\n"
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [
     "\r\n",
     "# Import utilities\r\n",
-    "import os, sys\r\n",
-    "from math import floor, ceil\r\n",
-    "from __future__ import print_function"
-   ]
+    "from math import floor, ceil\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Import amplpy and gurobipy\r\n",
     "from amplpy import AMPL\r\n",
     "import amplpy_gurobi as ampls"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Register jupyter magics for AMPL"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from amplpy import register_magics\n",
+    "from amplpy import register_magics\r\n",
     "register_magics('_ampl_cells')  # Store %%ampl cells in the list _ampl_cells"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### AMPL roll-cutting model (master problem)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%%ampl\n",
-    "param nPatterns integer > 0;\n",
-    "\n",
-    "set PATTERNS = 1..nPatterns;  # patterns\n",
-    "set WIDTHS;                   # finished widths\n",
-    "\n",
-    "param order {WIDTHS} >= 0;    # rolls of width j ordered\n",
-    "param overrun;                # permitted overrun on any width\n",
-    "\n",
-    "param rawWidth;               # width of raw rolls to be cut\n",
-    "param rolls {WIDTHS,PATTERNS} >= 0, default 0;   \n",
-    "                              # rolls of width i in pattern j\n",
-    "\n",
-    "var Cut {PATTERNS} integer >= 0;  # raw rolls to cut in each pattern\n",
-    "\n",
-    "minimize TotalRawRolls: sum {p in PATTERNS} Cut[p];\n",
-    "\n",
-    "subject to OrderLimits {w in WIDTHS}:\n",
+    "%%ampl\r\n",
+    "param nPatterns integer > 0;\r\n",
+    "\r\n",
+    "set PATTERNS = 1..nPatterns;  # patterns\r\n",
+    "set WIDTHS;                   # finished widths\r\n",
+    "\r\n",
+    "param order {WIDTHS} >= 0;    # rolls of width j ordered\r\n",
+    "param overrun;                # permitted overrun on any width\r\n",
+    "\r\n",
+    "param rawWidth;               # width of raw rolls to be cut\r\n",
+    "param rolls {WIDTHS,PATTERNS} >= 0, default 0;   \r\n",
+    "                              # rolls of width i in pattern j\r\n",
+    "\r\n",
+    "var Cut {PATTERNS} integer >= 0;  # raw rolls to cut in each pattern\r\n",
+    "\r\n",
+    "minimize TotalRawRolls: sum {p in PATTERNS} Cut[p];\r\n",
+    "\r\n",
+    "subject to OrderLimits {w in WIDTHS}:\r\n",
     "  order[w] <= sum {p in PATTERNS} rolls[w,p] * Cut[p] <= order[w] + overrun;"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Python data for cutting patterns"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "casename = 'UserCut3'\n",
-    "\n",
-    "roll_width = 6000\n",
-    "overrun = 3\n",
-    "\n",
-    "orders = {\n",
-    "1630: 172,\n",
-    "1625: 714,\n",
-    "1620: 110,\n",
-    "1617: 262,\n",
-    "1540: 32,\n",
-    "1529: 100,\n",
-    "1528: 76,\n",
-    "1505: 110,\n",
-    "1504: 20,\n",
-    "1484: 58,\n",
-    "1466: 15,\n",
-    "1450: 10,\n",
-    "1283: 40,\n",
-    "1017: 50,\n",
-    "970: 70,\n",
-    "930: 8,\n",
-    "916: 210,\n",
-    "898: 395,\n",
-    "894: 49,\n",
-    "881: 17,\n",
-    "855: 20,\n",
-    "844: 10,\n",
-    "805: 718,\n",
-    "787: 17,\n",
-    "786: 710,\n",
-    "780: 150,\n",
-    "754: 34,\n",
-    "746: 15,\n",
-    "707: 122,\n",
-    "698: 7,\n",
-    "651: 10,\n",
-    "644: 15,\n",
-    "638: 10,\n",
-    "605: 10,\n",
-    "477: 4,\n",
-    "473: 34,\n",
-    "471: 25,\n",
-    "468: 10,\n",
-    "460: 908,\n",
-    "458: 161,\n",
-    "453: 765,\n",
-    "447: 21,\n",
-    "441: 20,\n",
-    "422: 318,\n",
-    "421: 22,\n",
-    "419: 382,\n",
-    "396: 22,\n",
-    "309: 123,\n",
-    "266: 35\n",
-    "}\n",
-    "\n",
+    "casename = 'UserCut3'\r\n",
+    "\r\n",
+    "roll_width = 6000\r\n",
+    "overrun = 3\r\n",
+    "\r\n",
+    "orders = {\r\n",
+    "1630: 172,\r\n",
+    "1625: 714,\r\n",
+    "1620: 110,\r\n",
+    "1617: 262,\r\n",
+    "1540: 32,\r\n",
+    "1529: 100,\r\n",
+    "1528: 76,\r\n",
+    "1505: 110,\r\n",
+    "1504: 20,\r\n",
+    "1484: 58,\r\n",
+    "1466: 15,\r\n",
+    "1450: 10,\r\n",
+    "1283: 40,\r\n",
+    "1017: 50,\r\n",
+    "970: 70,\r\n",
+    "930: 8,\r\n",
+    "916: 210,\r\n",
+    "898: 395,\r\n",
+    "894: 49,\r\n",
+    "881: 17,\r\n",
+    "855: 20,\r\n",
+    "844: 10,\r\n",
+    "805: 718,\r\n",
+    "787: 17,\r\n",
+    "786: 710,\r\n",
+    "780: 150,\r\n",
+    "754: 34,\r\n",
+    "746: 15,\r\n",
+    "707: 122,\r\n",
+    "698: 7,\r\n",
+    "651: 10,\r\n",
+    "644: 15,\r\n",
+    "638: 10,\r\n",
+    "605: 10,\r\n",
+    "477: 4,\r\n",
+    "473: 34,\r\n",
+    "471: 25,\r\n",
+    "468: 10,\r\n",
+    "460: 908,\r\n",
+    "458: 161,\r\n",
+    "453: 765,\r\n",
+    "447: 21,\r\n",
+    "441: 20,\r\n",
+    "422: 318,\r\n",
+    "421: 22,\r\n",
+    "419: 382,\r\n",
+    "396: 22,\r\n",
+    "309: 123,\r\n",
+    "266: 35\r\n",
+    "}\r\n",
+    "\r\n",
     "widths = list(sorted(orders.keys(), reverse=True))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Define the AMPL master problem object and send data"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "Master = AMPL()\n",
+    "Master = AMPL()\r\n",
     "Master.eval(_ampl_cells[0])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Send scalar values\n",
-    "Master.param['nPatterns'] = len(widths)\n",
-    "Master.param['overrun'] = overrun\n",
-    "Master.param['rawWidth'] = roll_width\n",
-    "\n",
-    "# Send order vector\n",
-    "Master.set['WIDTHS'] = widths\n",
-    "Master.param['order'] = orders\n",
-    "\n",
-    "# Generate and send initial pattern matrix\n",
-    "Master.param['rolls'] = {\n",
-    "    (widths[i], 1+i): int(floor(roll_width/widths[i]))\n",
-    "    for i in range(len(widths))\n",
+    "# Send scalar values\r\n",
+    "Master.param['nPatterns'] = len(widths)\r\n",
+    "Master.param['overrun'] = overrun\r\n",
+    "Master.param['rawWidth'] = roll_width\r\n",
+    "\r\n",
+    "# Send order vector\r\n",
+    "Master.set['WIDTHS'] = widths\r\n",
+    "Master.param['order'] = orders\r\n",
+    "\r\n",
+    "# Generate and send initial pattern matrix\r\n",
+    "Master.param['rolls'] = {\r\n",
+    "    (widths[i], 1+i): int(floor(roll_width/widths[i]))\r\n",
+    "    for i in range(len(widths))\r\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### AMPL pattern-generation model (subproblem)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%%ampl\n",
-    "set SIZES;          # ordered widths\n",
-    "param cap >= 0;     # width of raw rolls\n",
-    "param val {SIZES};  # shadow prices of ordered widths (from Master)\n",
-    "\n",
-    "var Qty {SIZES} integer >= 0;  # number of each width in generated pattern\n",
-    "\n",
-    "maximize TotVal: sum {s in SIZES} val[s] * Qty[s];\n",
-    "    \n",
+    "%%ampl\r\n",
+    "set SIZES;          # ordered widths\r\n",
+    "param cap >= 0;     # width of raw rolls\r\n",
+    "param val {SIZES};  # shadow prices of ordered widths (from Master)\r\n",
+    "\r\n",
+    "var Qty {SIZES} integer >= 0;  # number of each width in generated pattern\r\n",
+    "\r\n",
+    "maximize TotVal: sum {s in SIZES} val[s] * Qty[s];\r\n",
+    "    \r\n",
     "subject to Cap: sum {s in SIZES} s * Qty[s] <= cap;"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Define the AMPL subproblem object and send data"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "Sub = AMPL()\n",
+    "Sub = AMPL()\r\n",
     "Sub.eval(_ampl_cells[1])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "Sub.set['SIZES'] = widths\n",
+    "Sub.set['SIZES'] = widths\r\n",
     "Sub.param['cap'] = roll_width"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Set up for generation loop"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Define which solver to use (right now either cplex or gurobi)\r\n",
     "solver = \"gurobi\"\r\n",
@@ -277,46 +285,46 @@
     "Master.option['relax_integrality'] =  1\r\n",
     "\r\n",
     "Sub.option['solver'] = solver"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Loop"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "while True:\n",
-    "    Master.solve()\n",
-    "\n",
-    "    Sub.param['val'].setValues(Master.con['OrderLimits'].getValues())\n",
-    "    Sub.solve()\n",
-    "    if Sub.obj['TotVal'].value() <= 1.00001:\n",
-    "        break\n",
-    "\n",
-    "    Master.param['newPat'].setValues(Sub.var['Qty'].getValues())\n",
-    "    Master.eval('let nPatterns := nPatterns + 1;')\n",
+    "while True:\r\n",
+    "    Master.solve()\r\n",
+    "\r\n",
+    "    Sub.param['val'].setValues(Master.con['OrderLimits'].getValues())\r\n",
+    "    Sub.solve()\r\n",
+    "    if Sub.obj['TotVal'].value() <= 1.00001:\r\n",
+    "        break\r\n",
+    "\r\n",
+    "    Master.param['newPat'].setValues(Sub.var['Qty'].getValues())\r\n",
+    "    Master.eval('let nPatterns := nPatterns + 1;')\r\n",
     "    Master.eval('let {w in WIDTHS} rolls[w, nPatterns] := newPat[w];')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Callback definition"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "class MyCallback(ampls.GenericCallback):\r\n",
     "    def __init__(self, stoprule):\r\n",
@@ -340,20 +348,20 @@
     "                self._current += 1\r\n",
     "                return 1\r\n",
     "        return 0"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Invoke solver to find an integer solution"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "Master.option['relax_integrality'] = 0\r\n",
     "# Export model to ampls\r\n",
@@ -383,121 +391,123 @@
     "\r\n",
     "# Import solution from Gurobi\r\n",
     "Master.importSolution(ampls_model)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Retrieve solution"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "source": [
+    "# Prepare summary data\r\n",
+    "summary = {\r\n",
+    "    'Data': casename,\r\n",
+    "    'Obj': int(Master.obj['TotalRawRolls'].value()),\r\n",
+    "    'Waste': Master.getValue(\r\n",
+    "             'sum {p in PATTERNS} Cut[p] * \\\r\n",
+    "                (rawWidth - sum {w in WIDTHS} w*rolls[w,p])'\r\n",
+    "             )\r\n",
+    "}\r\n",
+    "\r\n",
+    "# Retrieve patterns and solution\r\n",
+    "npatterns = int(Master.param['nPatterns'].value())\r\n",
+    "rolls = Master.param['rolls'].getValues().toDict()\r\n",
+    "cutvec = Master.var['Cut'].getValues().toDict()\r\n",
+    "\r\n",
+    "print(\"%d patterns generated\" % (npatterns))\r\n",
+    "\r\n",
+    "# Prepare solution data\r\n",
+    "solution = [\r\n",
+    "    ([int(rolls[widths[i], p+1]) \r\n",
+    "      for i in range(len(widths))], int(cutvec[p+1]))\r\n",
+    "    for p in range(npatterns)\r\n",
+    "    if cutvec[p+1] > 0\r\n",
+    "][:50]\r\n",
+    "\r\n",
+    "print(\"%d patterns used\" % (len(solution)))"
+   ],
+   "outputs": [],
    "metadata": {
     "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Prepare summary data\n",
-    "summary = {\n",
-    "    'Data': casename,\n",
-    "    'Obj': int(Master.obj['TotalRawRolls'].value()),\n",
-    "    'Waste': Master.getValue(\n",
-    "             'sum {p in PATTERNS} Cut[p] * \\\n",
-    "                (rawWidth - sum {w in WIDTHS} w*rolls[w,p])'\n",
-    "             )\n",
-    "}\n",
-    "\n",
-    "# Retrieve patterns and solution\n",
-    "npatterns = int(Master.param['nPatterns'].value())\n",
-    "rolls = Master.param['rolls'].getValues().toDict()\n",
-    "cutvec = Master.var['Cut'].getValues().toDict()\n",
-    "\n",
-    "print(\"%d patterns generated\" % (npatterns))\n",
-    "\n",
-    "# Prepare solution data\n",
-    "solution = [\n",
-    "    ([int(rolls[widths[i], p+1]) \n",
-    "      for i in range(len(widths))], int(cutvec[p+1]))\n",
-    "    for p in range(npatterns)\n",
-    "    if cutvec[p+1] > 0\n",
-    "][:50]\n",
-    "\n",
-    "print(\"%d patterns used\" % (len(solution)))"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Plotting routine"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def cuttingPlot(roll_width, widths, summary, solution):\n",
-    "    import numpy as np\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    nchuncks = max(int(ceil(len(solution)/25.0)), 1)\n",
-    "    chunck_size = int(ceil(len(solution)/float(nchuncks)))\n",
-    "    start = 0\n",
-    "    for i in range(nchuncks):            \n",
-    "        plt.subplot(1, nchuncks, i+1)        \n",
-    "        sol = solution[start:start+chunck_size]\n",
-    "        start += chunck_size\n",
-    "        ind = np.arange(len(sol))\n",
-    "        acc = [0]*len(sol)\n",
-    "        colorlist = ['red','lightblue','orange','lightgreen',\n",
-    "                     'brown','fuchsia','silver','goldenrod']\n",
-    "        for p, (patt, rep) in enumerate(sol):\n",
-    "            for i in range(len(widths)):\n",
-    "                for j in range(patt[i]):\n",
-    "                    vec = [0]*len(sol)\n",
-    "                    vec[p] = widths[i]\n",
-    "                    plt.barh(ind, vec, 0.6, acc, \n",
-    "                             color=colorlist[i%len(colorlist)], edgecolor='black')\n",
-    "                    acc[p] += widths[i]\n",
-    "        plt.xlim(0, roll_width)\n",
-    "        #plt.xticks(np.arange(0, roll_width, 10))\n",
-    "        plt.yticks(ind, tuple(\"x {:}\".format(rep) for patt, rep in sol))\n",
-    "    plt.suptitle('{}: {} rolls, {} patterns, {:.2f}% waste'.format(\n",
-    "        summary['Data'],\n",
-    "        summary['Obj'],\n",
-    "        len(solution),\n",
-    "        round(100*summary['Waste']/(roll_width*summary['Obj']),2),\n",
-    "    ))   \n",
+    "def cuttingPlot(roll_width, widths, summary, solution):\r\n",
+    "    import numpy as np\r\n",
+    "    import matplotlib.pyplot as plt\r\n",
+    "    nchuncks = max(int(ceil(len(solution)/25.0)), 1)\r\n",
+    "    chunck_size = int(ceil(len(solution)/float(nchuncks)))\r\n",
+    "    start = 0\r\n",
+    "    for i in range(nchuncks):            \r\n",
+    "        plt.subplot(1, nchuncks, i+1)        \r\n",
+    "        sol = solution[start:start+chunck_size]\r\n",
+    "        start += chunck_size\r\n",
+    "        ind = np.arange(len(sol))\r\n",
+    "        acc = [0]*len(sol)\r\n",
+    "        colorlist = ['red','lightblue','orange','lightgreen',\r\n",
+    "                     'brown','fuchsia','silver','goldenrod']\r\n",
+    "        for p, (patt, rep) in enumerate(sol):\r\n",
+    "            for i in range(len(widths)):\r\n",
+    "                for j in range(patt[i]):\r\n",
+    "                    vec = [0]*len(sol)\r\n",
+    "                    vec[p] = widths[i]\r\n",
+    "                    plt.barh(ind, vec, 0.6, acc, \r\n",
+    "                             color=colorlist[i%len(colorlist)], edgecolor='black')\r\n",
+    "                    acc[p] += widths[i]\r\n",
+    "        plt.xlim(0, roll_width)\r\n",
+    "        #plt.xticks(np.arange(0, roll_width, 10))\r\n",
+    "        plt.yticks(ind, tuple(\"x {:}\".format(rep) for patt, rep in sol))\r\n",
+    "    plt.suptitle('{}: {} rolls, {} patterns, {:.2f}% waste'.format(\r\n",
+    "        summary['Data'],\r\n",
+    "        summary['Obj'],\r\n",
+    "        len(solution),\r\n",
+    "        round(100*summary['Waste']/(roll_width*summary['Obj']),2),\r\n",
+    "    ))   \r\n",
     "    plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Display solution"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
    "source": [
-    "# Create plot of solution\n",
+    "# Create plot of solution\r\n",
     "cuttingPlot(roll_width, widths, summary, solution)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
