--- a/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
+++ b/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
@@ -14,9 +14,19 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "# Add library location to system path\r\n",
+    "# This is only necessary when using a non-distributed version of amplpy_gurobi\r\n",
+    "from sys import path\r\n",
+    "path.append(\"d:/development/ampl/solvers-private/build/vs64/bin\")\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "# Import utilities\r\n",
-    "import sys\r\n",
-    "sys.path.append(\"d:/development/ampl/solvers-private/build/vs64/bin\")\r\n",
     "from amplpy import AMPL          # pip install amplpy\r\n",
     "import amplpy_gurobi as ampls    # pip install ampls-gurobi\r\n",
     "import matplotlib.pyplot as plt  # pip install matplotlib\r\n",
@@ -385,26 +395,15 @@
     "ARCS = ampl.getData(\"{(i,j) in PAIRS : X[i,j]>0} X[i,j];\")\r\n",
     "ARCS = set([(i,j) for (i,j,k) in ARCS.toList()])\r\n",
     "# Print it\r\n",
-    "print(NODES)\r\n",
-    "print(ARCS)\r\n",
+    "print(f\"Optimal tour is: {ARCS}\")\r\n",
     "# Display it\r\n",
     "tours = findSubTours(ARCS, NODES)\r\n",
-    "print(\"Calling plottours\")\r\n",
     "plotTours(tours, CPOINTS)"
    ],
    "outputs": [],
    "metadata": {
     "scrolled": true
    }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "print(NODES)"
-   ],
-   "outputs": [],
-   "metadata": {}
   }
  ],
  "metadata": {
