Amended model to use tsplib95 to load tsp data files.

--- a/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
+++ b/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
@@ -27,8 +27,9 @@
    "execution_count": null,
    "source": [
     "# Import utilities\r\n",
-    "from amplpy import AMPL          # pip install amplpy\r\n",
+    "from amplpy import AMPL, DataFrame          # pip install amplpy\r\n",
     "import amplpy_gurobi as ampls    # pip install ampls-gurobi\r\n",
+    "import tsplib95 as tsp           # pip install tsplib95\r\n",
     "import matplotlib.pyplot as plt  # pip install matplotlib\r\n",
     "import matplotlib.colors as colors"
    ],
@@ -86,7 +87,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "AMPL data for TSP"
+    "Function to load TSP data files to an amplpy DataFrame"
    ],
    "metadata": {}
   },
@@ -94,26 +95,23 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "%%ampl\r\n",
-    "data; \r\n",
-    "param: NODES: hpos vpos :=\r\n",
-    "    N01  0 0\r\n",
-    "    N02  0 1\r\n",
-    "    N03  0 2\r\n",
-    "    N04  0 4\r\n",
-    "    N05  1 2\r\n",
-    "    N06  1 3\r\n",
-    "    N07  2 0\r\n",
-    "    N08  2 4\r\n",
-    "    N09  3 4\r\n",
-    "    N10  4 4\r\n",
-    "    N11  5 0\r\n",
-    "    N12  6 1\r\n",
-    "    N13  7 2\r\n",
-    "    N14  7 4\r\n",
-    "    N15  4 2\r\n",
-    "    N16  8 3\r\n",
-    "    N17  8 4;"
+    "def getDataFrameFromTspFile(tspFile):\r\n",
+    "  p = tsp.load(tspFile)\r\n",
+    "  if not p.is_depictable:\r\n",
+    "    printf(\"Problem is not depictable!\")\r\n",
+    "\r\n",
+    "  # Amendments as we need the nodes lexographically ordered\r\n",
+    "  nnodes = len(list(p.get_nodes()))\r\n",
+    "  i = 0\r\n",
+    "  while nnodes>1:\r\n",
+    "    nnodes = nnodes/10\r\n",
+    "    i+=1\r\n",
+    "  formatString = f\"{{:0{i}d}}\"\r\n",
+    "  nodes = {formatString.format(value) : p.node_coords[index+1] for index, value in enumerate(p.get_nodes())}\r\n",
+    "  df = DataFrame(index=[('NODES')],\r\n",
+    "            columns=['hpos', 'vpos'])\r\n",
+    "  df.setValues(nodes)\r\n",
+    "  return df"
    ],
    "outputs": [],
    "metadata": {}
@@ -129,13 +127,20 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "# Get the model from the cell above\r\n",
     "tspAMPLModel = _ampl_cells[0]\r\n",
-    "tspAMPLData = _ampl_cells[1]\r\n",
+    "\r\n",
+    "\r\n",
+    "# Set to True to plot the subtours found during the solution process\r\n",
+    "PLOTSUBTOURS = True\r\n",
     "solver = \"gurobi\"\r\n",
     "ampl = AMPL()\r\n",
     "ampl.eval(tspAMPLModel)\r\n",
-    "ampl.eval(tspAMPLData)\r\n",
     "ampl.option[\"solver\"] = solver\r\n",
+    "\r\n",
+    "# Set problem data from tsp file\r\n",
+    "df = getDataFrameFromTspFile(\"../tsp/ulysses22.tsp\")\r\n",
+    "ampl.setData(df, \"NODES\")\r\n",
     "\r\n",
     "# Set some globals that never change during the execution of the problem\r\n",
     "NODES = set(ampl.getData(\"NODES\").toList())\r\n",
@@ -215,7 +220,8 @@
     "    destination = [(i) for i in myarc if i != node][0]\r\n",
     "    # Remove from arcs and nodes to visit\r\n",
     "    arcs.remove(myarc)\r\n",
-    "    allnodes.remove(node)\r\n",
+    "    if node in allnodes:\r\n",
+    "        allnodes.remove(node)\r\n",
     "\r\n",
     "    trasverse(destination, arcs, allnodes, subtour)\r\n",
     "    return subtour\r\n",
@@ -270,7 +276,8 @@
     "        if len(subtours) <= 1:\r\n",
     "            break\r\n",
     "        print(f\"Found {len(subtours)} subtours, plotting them and adding cuts\")\r\n",
-    "        plotTours(subtours, CPOINTS)\r\n",
+    "        if PLOTSUBTOURS:\r\n",
+    "            plotTours(subtours, CPOINTS)\r\n",
     "        # Else add the current tours to the list of subtours\r\n",
     "        allsubtours.extend(subtours)\r\n",
     "        # And add those to the constraints by assigning the values to\r\n",
@@ -304,19 +311,24 @@
     "                arcs = [xvars[i] for i,value in enumerate(sol) if value > 0]\r\n",
     "                subTours = findSubTours(set(arcs), set(vertices))\r\n",
     "                if len(subTours) ==1:\r\n",
-    "                    print(\"No subtours detected. Ending optimization.\")\r\n",
-    "                    return -1\r\n",
+    "                    print(\"No subtours detected. Not adding any cut\")\r\n",
+    "                    return 0\r\n",
     "                print(f\"Found {len(subTours)} subtours, plotting them and adding cuts for {len(subTours)-1} tours\")\r\n",
-    "                plotTours(subTours, CPOINTS)\r\n",
-    "                for subTour in subTours[:-1]:\r\n",
+    "                if PLOTSUBTOURS:\r\n",
+    "                    plotTours(subTours, CPOINTS)\r\n",
+    "                for subTour in subTours:\r\n",
     "                    st1 = set(subTour)\r\n",
     "                    nst1 = set(vertices) - st1\r\n",
     "                    externalArcs = [(i,j) if i < j else (j,i) for i in st1 for j in nst1]\r\n",
     "                    varsExternalArcs = [xinverse[(i,j)] for (i,j) in externalArcs]\r\n",
     "                    coeffs = [1 for i in range(len(varsExternalArcs))]\r\n",
     "                    varsExternalArcs = sorted(varsExternalArcs)\r\n",
-    "                    print(f\"Adding cut for subtour {str(st1)}\")\r\n",
+    "                    if PLOTSUBTOURS:\r\n",
+    "                        print(f\"Adding cut for subtour {str(st1)}\")\r\n",
     "                    self.addLazyIndices(varsExternalArcs , coeffs, ampls.CutDirection.GE, 2)\r\n",
+    "                    if len(subTours) == 2:\r\n",
+    "                        return 0\r\n",
+    "                print(\"Continue solving\")\r\n",
     "            return 0\r\n",
     "        except Exception as e:\r\n",
     "            print('Error:', e)\r\n",
