Amended python TSP example

--- a/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
+++ b/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
@@ -56,6 +56,24 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Execution parameters (problem params)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "PLOTSUBTOURS = True\r\n",
+    "solver = \"gurobi\"\r\n",
+    "tspFile = \"../tsp/ulysses22.tsp\""
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Define TSP model in AMPL"
    ],
    "metadata": {}
@@ -66,8 +84,8 @@
    "source": [
     "%%ampl\r\n",
     "set NODES ordered;\r\n",
-    "param hpos {NODES} >= 0;\r\n",
-    "param vpos {NODES} >= 0;\r\n",
+    "param hpos {NODES};\r\n",
+    "param vpos {NODES};\r\n",
     "\r\n",
     "set PAIRS := {i in NODES, j in NODES: ord(i) < ord(j)};\r\n",
     "\r\n",
@@ -87,7 +105,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Function to load TSP data files to an amplpy DataFrame"
+    "Function to load TSP data files and return a dictionary of (nodeid : coordinate)"
    ],
    "metadata": {}
   },
@@ -95,7 +113,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "def getDataFrameFromTspFile(tspFile):\r\n",
+    "def getDictFromTspFile(tspFile):\r\n",
     "  p = tsp.load(tspFile)\r\n",
     "  if not p.is_depictable:\r\n",
     "    printf(\"Problem is not depictable!\")\r\n",
@@ -108,10 +126,7 @@
     "    i+=1\r\n",
     "  formatString = f\"{{:0{i}d}}\"\r\n",
     "  nodes = {formatString.format(value) : p.node_coords[index+1] for index, value in enumerate(p.get_nodes())}\r\n",
-    "  df = DataFrame(index=[('NODES')],\r\n",
-    "            columns=['hpos', 'vpos'])\r\n",
-    "  df.setValues(nodes)\r\n",
-    "  return df"
+    "  return nodes"
    ],
    "outputs": [],
    "metadata": {}
@@ -130,22 +145,22 @@
     "# Get the model from the cell above\r\n",
     "tspAMPLModel = _ampl_cells[0]\r\n",
     "\r\n",
-    "\r\n",
-    "# Set to True to plot the subtours found during the solution process\r\n",
-    "PLOTSUBTOURS = True\r\n",
-    "solver = \"gurobi\"\r\n",
+    "# Load model in AMPL\r\n",
     "ampl = AMPL()\r\n",
     "ampl.eval(tspAMPLModel)\r\n",
     "ampl.option[\"solver\"] = solver\r\n",
     "\r\n",
     "# Set problem data from tsp file\r\n",
-    "df = getDataFrameFromTspFile(\"../tsp/ulysses22.tsp\")\r\n",
+    "nodes = getDictFromTspFile(tspFile)\r\n",
+    "\r\n",
+    "# Pass them to AMPL using a dataframe\r\n",
+    "df = DataFrame(index=[('NODES')], columns=['hpos', 'vpos'])\r\n",
+    "df.setValues(nodes)\r\n",
     "ampl.setData(df, \"NODES\")\r\n",
     "\r\n",
     "# Set some globals that never change during the execution of the problem\r\n",
-    "NODES = set(ampl.getData(\"NODES\").toList())\r\n",
-    "POINTS = ampl.getData(\"hpos,vpos\").toList()\r\n",
-    "CPOINTS = {node: complex(x, y) for (node, x, y) in POINTS}"
+    "NODES = set(nodes.keys())\r\n",
+    "CPOINTS = {node : complex(coordinate[0], coordinate[1]) for (node, coordinate) in nodes.items()}"
    ],
    "outputs": [],
    "metadata": {}
