Amended Python examples

--- a/python/examples/notebooks/pattern_generation_generic.ipynb
+++ b/python/examples/notebooks/pattern_generation_generic.ipynb
@@ -338,6 +338,7 @@
     "                    (100*self._stoprule['gaptol'][self._current]))\r\n",
     "        ampls_model.setAMPLsParameter(ampls.SolverParams.DBL_MIPGap,\r\n",
     "                             self._stoprule['gaptol'][self._current])\r\n",
+    "        self._current += 1\r\n",
     "    def run(self):\r\n",
     "        where = self.getAMPLWhere()\r\n",
     "        if where == ampls.Where.MIPNODE:\r\n",
@@ -345,8 +346,7 @@
     "            if runtime >= self._stoprule['time'][self._current]:\r\n",
     "                print(f\"Stopping optimization at {runtime} seconds\")\r\n",
     "                self._continueOpt = True\r\n",
-    "                self._current += 1\r\n",
-    "                return 1\r\n",
+    "                return -1\r\n",
     "        return 0"
    ],
    "outputs": [],
@@ -371,7 +371,7 @@
     "ampls_model = Master.exportModel(solver, [\"return_mipgap=5\"])\r\n",
     "\r\n",
     "# Callback's stopping rule is created here...\r\n",
-    "stopdict = { 'time'   : (  5,    15,   30, 60 ),\r\n",
+    "stopdict = { 'time'   : (  3,    6,   10, 60 ),\r\n",
     "             'gaptol' : ( .0002, .002, .02, .1 )\r\n",
     "}\r\n",
     "# ...and initialized in the constructor\r\n",
@@ -390,7 +390,13 @@
     "    callback.setCurrentGap()\r\n",
     "\r\n",
     "# Import solution from Gurobi\r\n",
-    "Master.importSolution(ampls_model)"
+    "Master.importSolution(ampls_model)\r\n",
+    "\r\n",
+    "if solver == \"gurobi\": # use solver-specific API to get the actual MIPGAP\r\n",
+    "  print(f\"From Gurobi MIPGap={100*ampls_model.getDoubleAttr(ampls.GRB_DBL_ATTR_MIPGAP):.3f}%\")\r\n",
+    "\r\n",
+    "print(f\"From AMPL MIPGap={100*Master.getValue('TotalRawRolls.relmipgap'):.3f}%\")\r\n",
+    "print(f\"Objective value: {Master.getValue('TotalRawRolls')}\")"
    ],
    "outputs": [],
    "metadata": {}
@@ -494,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "source": [
     "# Create plot of solution\r\n",
     "cuttingPlot(roll_width, widths, summary, solution)"
