--- a/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
+++ b/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "PLOTSUBTOURS = True\r\n",
     "solver = \"gurobi\"\r\n",
-    "tspFile = \"../tsp/ulysses22.tsp\""
+    "tspFile = \"../tsp/gr96.tsp\""
    ],
    "outputs": [],
    "metadata": {}
