Added simple TSP cut in C++

--- a/python/examples/notebooks/pattern_generation_generic.ipynb
+++ b/python/examples/notebooks/pattern_generation_generic.ipynb
@@ -341,12 +341,16 @@
     "        self._current += 1\r\n",
     "    def run(self):\r\n",
     "        where = self.getAMPLWhere()\r\n",
+    "        # Check if we hit our runtime limit every time we enter a new MIP node\r\n",
     "        if where == ampls.Where.MIPNODE:\r\n",
     "            runtime = self.getValue(ampls.Value.RUNTIME).dbl\r\n",
     "            if runtime >= self._stoprule['time'][self._current]:\r\n",
     "                print(f\"Stopping optimization at {runtime} seconds\")\r\n",
     "                self._continueOpt = True\r\n",
     "                return -1\r\n",
+    "        # Print the solver message if present\r\n",
+    "        if where == ampls.Where.MSG:\r\n",
+    "            print(self.getMessage())\r\n",
     "        return 0"
    ],
    "outputs": [],
@@ -368,7 +372,7 @@
     "# If we plan to import the results back to AMPL, we have to explicitly set what additional\r\n",
     "# suffixes we want returned at this stage\r\n",
     "# In this case, we want to return the mip gap as a suffix\r\n",
-    "ampls_model = Master.exportModel(solver, [\"return_mipgap=5\"])\r\n",
+    "ampls_model = Master.exportModel(solver, [\"return_mipgap=5\", \"outlev=1\"])\r\n",
     "\r\n",
     "# Callback's stopping rule is created here...\r\n",
     "stopdict = { 'time'   : (  3,    6,   10, 60 ),\r\n",
