--- a/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
+++ b/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# Import utilities\r\n",
     "from amplpy import AMPL, DataFrame          # pip install amplpy\r\n",
-    "import amplpy_gurobi as ampls    # pip install ampls-gurobi\r\n",
+    "import amplpy_cplex as ampls    # pip install ampls-gurobi\r\n",
     "import tsplib95 as tsp           # pip install tsplib95\r\n",
     "import matplotlib.pyplot as plt  # pip install matplotlib\r\n",
     "import matplotlib.colors as colors"
@@ -65,7 +65,7 @@
    "execution_count": null,
    "source": [
     "PLOTSUBTOURS = True\r\n",
-    "solver = \"gurobi\"\r\n",
+    "solver = \"cplex\"\r\n",
     "tspFile = \"../tsp/gr96.tsp\""
    ],
    "outputs": [],
@@ -317,18 +317,23 @@
    "source": [
     "# Callback class that actually add the cuts if subtours are found in a solution\r\n",
     "class MyCallback(ampls.GenericCallback):\r\n",
+    "    def __init__(self): \r\n",
+    "      # Constructor, simply sets the iteration number to 0\r\n",
+    "      super().__init__()\r\n",
+    "      self.iteration = 0 \r\n",
     "    def run(self):\r\n",
     "        try:\r\n",
     "            # For each solution\r\n",
     "            if self.getAMPLWhere() == ampls.Where.MIPSOL:\r\n",
-    "                print(\"\\n******************\\nFound one solution\")\r\n",
+    "                self.iteration += 1\r\n",
+    "                print(f\"\\nIteration {self.iteration}: Finding subtours\")\r\n",
     "                sol = self.getSolutionVector()\r\n",
     "                arcs = [xvars[i] for i,value in enumerate(sol) if value > 0]\r\n",
     "                subTours = findSubTours(set(arcs), set(vertices))\r\n",
     "                if len(subTours) ==1:\r\n",
     "                    print(\"No subtours detected. Not adding any cut\")\r\n",
     "                    return 0\r\n",
-    "                print(f\"Found {len(subTours)} subtours, plotting them and adding cuts for {len(subTours)-1} tours\")\r\n",
+    "                print(f\"Adding {len(subTours)} cuts\")\r\n",
     "                if PLOTSUBTOURS:\r\n",
     "                    plotTours(subTours, CPOINTS)\r\n",
     "                for subTour in subTours:\r\n",
@@ -421,10 +426,11 @@
     "# Get the solution into ARCS\r\n",
     "ARCS = ampl.getData(\"{(i,j) in PAIRS : X[i,j]>0} X[i,j];\")\r\n",
     "ARCS = set([(i,j) for (i,j,k) in ARCS.toList()])\r\n",
-    "# Print it\r\n",
-    "print(f\"Optimal tour is: {ARCS}\")\r\n",
+    "\r\n",
     "# Display it\r\n",
     "tours = findSubTours(ARCS, NODES)\r\n",
+    "for st in tours:\r\n",
+    "  print(st)\r\n",
     "plotTours(tours, CPOINTS)"
    ],
    "outputs": [],
