Added Python aliases and mapping methods.

--- a/python/examples/notebooks/pattern_generation_generic.ipynb
+++ b/python/examples/notebooks/pattern_generation_generic.ipynb
@@ -336,11 +336,11 @@
     "    def setCurrentGap(self):\r\n",
     "        print(\"Increasing gap tolerance to %.2f%%\" % \\\r\n",
     "                    (100*self._stoprule['gaptol'][self._current]))\r\n",
-    "        ampls_model.setAMPLsParameter(ampls.SolverParams.DBL_MIPGap,\r\n",
+    "        ampls_model.setAMPLSParameter(ampls.SolverParams.DBL_MIPGap,\r\n",
     "                             self._stoprule['gaptol'][self._current])\r\n",
     "        self._current += 1\r\n",
     "    def run(self):\r\n",
-    "        where = self.getAMPLWhere()\r\n",
+    "        where = self.getAMPLSWhere()\r\n",
     "        # Check if we hit our runtime limit every time we enter a new MIP node\r\n",
     "        if where == ampls.Where.MIPNODE:\r\n",
     "            runtime = self.getValue(ampls.Value.RUNTIME).dbl\r\n",
