--- a/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
+++ b/python/examples/notebooks/tsp_simple_cuts_generic.ipynb
@@ -467,7 +467,7 @@
         "    def run(self):\n",
         "        try:\n",
         "            # For each solution\n",
-        "            if self.getAMPLWhere() == ampls.Where.MIPSOL:\n",
+        "            if self.getAMPLSWhere() == ampls.Where.MIPSOL:\n",
         "                self.iteration += 1\n",
         "                print(f\"\\nIteration {self.iteration}: Finding subtours\")\n",
         "                sol = self.getSolutionVector()\n",
